# ManuelsCode

Bachelorarbeit_Matlab_Mcr/Matlab_Code_BA/: EingespanntEinzellastGUI.m  EingespanntLinienlastGUI.m  GUI.fig  GUI.m  GUI.prj  GabellagerEinzellastGUI.m  GabellagerLinienlastGUI.m  integralmatrixGUI.m
Bachelorarbeit_Matlab_Mcr/Matlab_Code_BA/GUI/: PackagingLog.html
Bachelorarbeit_Matlab_Mcr/Matlab_Code_BA/GUI/for_redistribution_files_only/: readme.txt
avocado_forecasting/: avocadoPriceForecasting.ipynb  avocadoPriceForecasting.py
finiteElementModel/: finiteElementModel.py  readme.txt
matrixComputation/source/: CMakeLists.txt
matrixComputation/source/drivers/: main.cpp
stiffnessMatrixComputation/: elementStiffnessMatrix.py
traficLight_symPy_test/: car.py  main.py  traffic_light.py
